add cross validation for lr

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,20 +11,15 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from math import sqrt\n",
     "import numpy as np\n",
-    "import matplotlib as mp\n",
-    "import matplotlib.pyplot as plt\n",
     "from scipy.sparse import hstack\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "%matplotlib inline"
+    "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('train.csv')"
@@ -49,7 +42,7 @@
       "Id                        560804 non-null int64\n",
       "ProductId                 560804 non-null object\n",
       "Score                     460804 non-null float64\n",
-      "Summary                   560778 non-null object\n",
+      "Summary                   560777 non-null object\n",
       "Text                      560804 non-null object\n",
       "Time                      560804 non-null int64\n",
       "UserId                    560804 non-null object\n",
@@ -71,17 +64,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -220,7 +213,7 @@
       "Id                        460804 non-null int64\n",
       "ProductId                 460804 non-null object\n",
       "Score                     460804 non-null float64\n",
-      "Summary                   460782 non-null object\n",
+      "Summary                   460781 non-null object\n",
       "Text                      460804 non-null object\n",
       "Time                      460804 non-null int64\n",
       "UserId                    460804 non-null object\n",
@@ -294,9 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -345,18 +336,18 @@
       "reg: 0.1\n",
       "reg: 0.4\n",
       "reg: 0.7\n",
-      "reg: 1\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'min_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-cc78868a26ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mmin_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0mbest_C\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mmin_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'min_score' is not defined"
+      "reg: 1\n",
+      "reg: 3\n",
+      "reg: 5\n",
+      "reg: 7\n",
+      "reg: 9\n",
+      "reg: 11\n",
+      "reg: 13\n",
+      "reg: 15\n",
+      "reg: 17\n",
+      "reg: 19\n",
+      "the best C: 9\n",
+      "max score: 0.827037080628\n"
      ]
     }
    ],
@@ -379,13 +370,18 @@
     "    clf = LogisticRegression(C=reg, solver='saga')\n",
     "    scores = cross_val_score(clf, X_train, y, cv=3)\n",
     "    s = scores.mean()\n",
-    "    if (s > min_score):\n",
+    "    if (s > max_score):\n",
     "        best_C = reg\n",
-    "        min_score = s\n",
+    "        max_score = s\n",
     "\n",
     "        \n",
     "print('the best C:', best_C)\n",
     "print('max score:',max_score)\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "lr.fit(X_train, y)\n",
+    "y_pred_lr = lr.predict(X_test)\n",
+    "res = pd.DataFrame(data={'Id':test.Id, 'Score':y_pred_lr})\n",
     "# def lr_predict(X_train, X_test, y_train, y_test, reg):\n",
     "#     # Logistic regression\n",
     "#     lr = LogisticRegression(C=reg, solver='saga')\n",
@@ -397,16 +393,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LogisticRegression()\n",
+    "lr = LogisticRegression(C=best_C, solver='saga')\n",
     "lr.fit(X_train, y)\n",
     "y_pred_lr = lr.predict(X_test)\n",
-    "res = pd.DataFrame(data={'Id':test.Id, 'Score':y_pred_lr})"
+    "res = pd.DataFrame(data={'Id':test.Id, 'Score':y_pred_lr})\n",
+    "res.to_csv('result.csv', index = False)"
    ]
   },
   {
@@ -542,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
